Fix: sort out vertical whitespace after a table

--- a/src/ishi/15-tables/common/_table.scss
+++ b/src/ishi/15-tables/common/_table.scss
@@ -2,6 +2,6 @@ table {
     width: 100%
 }
 
-table + p, table + ol, table + ul {
+table + p, table + ol, table + ul, table + div {
     margin-top: $type-non-p-spacing;
 }
